--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<p> Matt Wagner</p>;
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>Curriculum Vitae of Matt Wagner</title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li>Overview</li>
+                <li>Scalable Press</li> 
+                <li>Engine Ecommerce</li>
+                <li>Real Esate</li>
+                <li>Sony Music</li>
+                <li>Other Experiences</li>
+            </ul>
+        </nav>
+        <main>
+            <h1> Overview</h1>
+                <h2> Account Manager / Analyst</h2>
+                    <h3> Consumer Packaged Goods &#8226 Entertainment &#8226 Software Sales</h3>
+                    <p>Account Manager with 15 years of progressive experience within an electronics and entertainment vendor, including 12 years of inventory analysis. Strong history of working with accounts ranging from independent retailers to wholesalers to national chains including Barnes & Noble, Best Buy, Circuit City, Target, Kmart and 6 years working on the Walmart account team</p>
+                <h2> Core Qualifications</h2>
+                    <ul>
+                        <li>Sales & Marketing</li>
+                        <li> Merchandising</li>
+                        <li>Demand Planning</li>
+                        <li>New Product Sales</li>
+                        <li>Replenishment</li>
+                        <li>Forecasting</li>
+                        <li>Excel Expert</li>
+                        <li>Retail Link</li>
+                        <li>Retailtainment</li>
+                        <li>PowerPoint</li>
+                        <li>Customer Relationships</li>
+                        <li>Promotion Planning</li>
+                    </ul>
+                
+            <h2>Scalable Press</h2>
+                <p>Beginning in mid-December, I will be joining the team at Scalable Press as a Marketing Services Manager.</p>
+                <p>Scalable Press is a leader in print-on-demand merchandise, and my role will be creating a pilot program to bnridge the gap between brick & mortar and digital storefronts.
+                        I will be creating a sales process to allow small businesses to create simple web pages for print-on-demand merch to promote thier business, without the need to create the product in advance and store the inventory.
+                        This is an exciting opportunity to expand their business and build out a new sales team
+                </p> 
+            <h2> Engine Ecommerce</h2>
+                <p>In early 2018, I was approached by the team at a software startup in Fayetteville that was building a SAAS ecommerce platform.
+                     I was brought on to help build out the sales team.
+                     This was my first experience working with a strartup, and it was thrilling working with the visionary team that was in place.
+                     We built a great product, but unfortunatly we ran out of runway before getting the business to take off and the company folded in February, 2020.
+                </p>
+            <h2>Real Estate</h2>
+                <p> I spent two years working as a REALTOR&#174 in Northwest Arkansas from 2016 - 2018.
+                    During that time, I worked for Keller Williams and then Weichert Realtors. 
+                    I enjoyed my time as a real estate agent, and loved helping people find the perfect home and negotiate a deal on their behalf.
+                    </p>>
+            <h2>SONY Music Entertainment</h2>
+                <p>My career with Sony actually began when I started working as a mailroom coordinator for the Dallas branch office of BMG Music Distribution in early 2001.
+                    I knew this would not be a normal career when my first day on the job, I was invited after work to go to Dave & Buster's to play pool with P!nk since she was in town for a radio promotion.
+                    I spent 15 years with BMG, then SONY-BMG when they merged and finally SONY music after the name changed.
+                    Although I started in the Dallas office, after a year I moved to Miami to work in the field, reporting to the Atlanta branch. I was in Miami from 2002 - 2010 when I joined the SONY team selling to Walmart and relocated to Northwest Arkansas.
+                    During my time with the company, I held a variety of roles: Mailroom Coordinator, Field Merchandising Rep, Sales & Marketing Rep, Vendor Inventory Analyst, and as an Account Executive for Latin Music.
+                    </p>
+            <h2> Other Experiences</h2>
+                <p>Before working for SONY, I had several other jobs in the music industry:
+                    <ul>
+                        <li>Radio personality</li>
+                        <li>Street Promotions for Columbia Records, Kinetic Records, Astralwerks, and TVT Records</li>
+                        <li>Music Retail Store Manager</li>
+                        <li>DJ at a weekly club night, and at many underground events and festivals</li>
+                        <li>Music Director at a college radio station</li>
+                    </ul>
+                    </p>>
+
+        </main>
+    </body>
+</html>
