--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         I was brought on to help build out the sales team.
                         This was my first experience working with a strartup, and it was thrilling working with the visionary team that was in place.
                         We built a great product, but unfortunatly we ran out of runway before getting the business to take off and the company folded in February, 2020.
+                        One of my biggest takeaways from working so closely with the development team at this company was how much I enjoyed seeing the work they were doing, and I became more interested in learning more about coding.
                         </p>
                 </section>
                 <section>
@@ -63,6 +64,7 @@
                         I spent 15 years with BMG, then SONY-BMG when they merged and finally SONY music after the name changed.
                         Although I started in the Dallas office, after a year I moved to Miami to work in the field, reporting to the Atlanta branch. I was in Miami from 2002 - 2010 when I joined the SONY team selling to Walmart and relocated to Northwest Arkansas.
                         During my time with the company, I held a variety of roles: Mailroom Coordinator, Field Merchandising Rep, Sales & Marketing Rep, Vendor Inventory Analyst, and as an Account Executive for Latin Music.
+                        As an analyst, I taught myself how to write macros, and some rudimentary coding in SQL and Python.
                         </p>
                         </section>
                 <section>
